tests/baselines/reference/privacyCheckTypeOfFunction.errors.txt
tests/cases/compiler/privacyCheckTypeOfFunction.ts(3,22): error TS4025: Type of variable 'x' references inaccessible name 'foo'.
tests/cases/compiler/privacyCheckTypeOfFunction.ts(4,12): error TS4025: Type of variable 'b' references inaccessible name 'foo'.


==== tests/cases/compiler/privacyCheckTypeOfFunction.ts (2 errors) ====
    function foo() {
    }
    export var x: typeof foo;
                         ~~~
!!! error TS4025: Type of variable 'x' references inaccessible name 'foo'.
    export var b = foo;
               ~
!!! error TS4025: Type of variable 'b' references inaccessible name 'foo'.
    